--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "git clone git@github.com:babel/babylon.git ../babylon",
     "cpu-prof": "node --cpu-prof --cpu-prof-dir=./cpuprofile --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
     "test": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable index.js",
+    "profile": "node --max-old-space-size=2000 --max-semi-space-size=1500 --predictable profile.js",
     "print-bytecode": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable --print-bytecode parse.js > parse.bytecode.txt",
     "print-code": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable --print-opt-code --code-comments --redirect-code-traces --redirect-code-traces-to=./parse.asm parse.js",
     "memory": "node --expose-gc --max-old-space-size=2000 --max-semi-space-size=1500 --predictable mem.js"
@@ -84,10 +85,15 @@
     "@babel/parser_7.16.7": "npm:@babel/parser@^7.16.7",
     "@babel/parser_7.16.8": "npm:@babel/parser@^7.16.8",
     "@babel/parser_7.17.0": "npm:@babel/parser@^7.17.0",
+    "@babel/parser_7.17.10": "npm:@babel/parser@^7.17.10",
+    "@babel/parser_7.17.12": "npm:@babel/parser@^7.17.12",
     "@babel/parser_7.17.3": "npm:@babel/parser@^7.17.3",
     "@babel/parser_7.17.7": "npm:@babel/parser@^7.17.7",
     "@babel/parser_7.17.8": "npm:@babel/parser@^7.17.8",
     "@babel/parser_7.17.9": "npm:@babel/parser@^7.17.9",
+    "@babel/parser_7.18.0": "npm:@babel/parser@^7.18.0",
+    "@babel/parser_7.18.3": "npm:@babel/parser@^7.18.3",
+    "@babel/parser_7.18.4": "npm:@babel/parser@^7.18.4",
     "@babel/parser_7.2.0": "npm:@babel/parser@^7.2.0",
     "@babel/parser_7.2.2": "npm:@babel/parser@^7.2.2",
     "@babel/parser_7.2.3": "npm:@babel/parser@^7.2.3",
@@ -130,6 +136,7 @@
     "meriyah": "^1.6.15"
   },
   "devDependencies": {
+    "0x": "^5.2.1",
     "benchmark": "^2.1.4",
     "microtime": "^3.0.0"
   }
