--- a/package.json
+++ b/package.json
@@ -17,125 +17,50 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/parser_7.0.0": "npm:@babel/parser@^7.0.0",
-    "@babel/parser_7.1.0": "npm:@babel/parser@^7.1.0",
-    "@babel/parser_7.1.1": "npm:@babel/parser@^7.1.1",
-    "@babel/parser_7.1.2": "npm:@babel/parser@^7.1.2",
-    "@babel/parser_7.1.3": "npm:@babel/parser@^7.1.3",
-    "@babel/parser_7.1.5": "npm:@babel/parser@^7.1.5",
-    "@babel/parser_7.1.6": "npm:@babel/parser@^7.1.6",
-    "@babel/parser_7.10.0": "npm:@babel/parser@^7.10.0",
-    "@babel/parser_7.10.1": "npm:@babel/parser@^7.10.1",
-    "@babel/parser_7.10.2": "npm:@babel/parser@^7.10.2",
-    "@babel/parser_7.10.3": "npm:@babel/parser@^7.10.3",
-    "@babel/parser_7.10.4": "npm:@babel/parser@^7.10.4",
-    "@babel/parser_7.10.5": "npm:@babel/parser@^7.10.5",
-    "@babel/parser_7.11.0": "npm:@babel/parser@^7.11.0",
-    "@babel/parser_7.11.1": "npm:@babel/parser@^7.11.1",
-    "@babel/parser_7.11.2": "npm:@babel/parser@^7.11.2",
-    "@babel/parser_7.11.3": "npm:@babel/parser@^7.11.3",
-    "@babel/parser_7.11.4": "npm:@babel/parser@^7.11.4",
-    "@babel/parser_7.11.5": "npm:@babel/parser@^7.11.5",
-    "@babel/parser_7.12.0": "npm:@babel/parser@^7.12.0",
-    "@babel/parser_7.12.1": "npm:@babel/parser@^7.12.1",
-    "@babel/parser_7.12.10": "npm:@babel/parser@^7.12.10",
-    "@babel/parser_7.12.11": "npm:@babel/parser@^7.12.11",
-    "@babel/parser_7.12.13": "npm:@babel/parser@^7.12.13",
-    "@babel/parser_7.12.14": "npm:@babel/parser@^7.12.14",
-    "@babel/parser_7.12.15": "npm:@babel/parser@^7.12.15",
-    "@babel/parser_7.12.16": "npm:@babel/parser@^7.12.16",
-    "@babel/parser_7.12.17": "npm:@babel/parser@^7.12.17",
-    "@babel/parser_7.12.2": "npm:@babel/parser@^7.12.2",
-    "@babel/parser_7.12.3": "npm:@babel/parser@^7.12.3",
-    "@babel/parser_7.12.5": "npm:@babel/parser@^7.12.5",
-    "@babel/parser_7.12.7": "npm:@babel/parser@^7.12.7",
-    "@babel/parser_7.13.0": "npm:@babel/parser@^7.13.0",
-    "@babel/parser_7.13.10": "npm:@babel/parser@^7.13.10",
-    "@babel/parser_7.13.11": "npm:@babel/parser@^7.13.11",
-    "@babel/parser_7.13.12": "npm:@babel/parser@^7.13.12",
-    "@babel/parser_7.13.13": "npm:@babel/parser@^7.13.13",
-    "@babel/parser_7.13.15": "npm:@babel/parser@^7.13.15",
-    "@babel/parser_7.13.16": "npm:@babel/parser@^7.13.16",
-    "@babel/parser_7.13.4": "npm:@babel/parser@^7.13.4",
-    "@babel/parser_7.13.9": "npm:@babel/parser@^7.13.9",
-    "@babel/parser_7.14.0": "npm:@babel/parser@^7.14.0",
-    "@babel/parser_7.14.1": "npm:@babel/parser@^7.14.1",
-    "@babel/parser_7.14.2": "npm:@babel/parser@^7.14.2",
-    "@babel/parser_7.14.3": "npm:@babel/parser@^7.14.3",
-    "@babel/parser_7.14.4": "npm:@babel/parser@^7.14.4",
-    "@babel/parser_7.14.5": "npm:@babel/parser@^7.14.5",
-    "@babel/parser_7.14.6": "npm:@babel/parser@^7.14.6",
-    "@babel/parser_7.14.7": "npm:@babel/parser@^7.14.7",
-    "@babel/parser_7.14.8": "npm:@babel/parser@^7.14.8",
-    "@babel/parser_7.14.9": "npm:@babel/parser@^7.14.9",
-    "@babel/parser_7.15.0": "npm:@babel/parser@^7.15.0",
-    "@babel/parser_7.15.2": "npm:@babel/parser@^7.15.2",
-    "@babel/parser_7.15.3": "npm:@babel/parser@^7.15.3",
-    "@babel/parser_7.15.4": "npm:@babel/parser@^7.15.4",
-    "@babel/parser_7.15.5": "npm:@babel/parser@^7.15.5",
-    "@babel/parser_7.15.6": "npm:@babel/parser@^7.15.6",
-    "@babel/parser_7.15.7": "npm:@babel/parser@^7.15.7",
-    "@babel/parser_7.15.8": "npm:@babel/parser@^7.15.8",
-    "@babel/parser_7.16.0": "npm:@babel/parser@^7.16.0",
-    "@babel/parser_7.16.10": "npm:@babel/parser@^7.16.10",
-    "@babel/parser_7.16.12": "npm:@babel/parser@^7.16.12",
-    "@babel/parser_7.16.2": "npm:@babel/parser@^7.16.2",
-    "@babel/parser_7.16.3": "npm:@babel/parser@^7.16.3",
-    "@babel/parser_7.16.4": "npm:@babel/parser@^7.16.4",
-    "@babel/parser_7.16.5": "npm:@babel/parser@^7.16.5",
-    "@babel/parser_7.16.6": "npm:@babel/parser@^7.16.6",
-    "@babel/parser_7.16.7": "npm:@babel/parser@^7.16.7",
-    "@babel/parser_7.16.8": "npm:@babel/parser@^7.16.8",
-    "@babel/parser_7.17.0": "npm:@babel/parser@^7.17.0",
-    "@babel/parser_7.17.10": "npm:@babel/parser@^7.17.10",
-    "@babel/parser_7.17.12": "npm:@babel/parser@^7.17.12",
-    "@babel/parser_7.17.3": "npm:@babel/parser@^7.17.3",
-    "@babel/parser_7.17.7": "npm:@babel/parser@^7.17.7",
-    "@babel/parser_7.17.8": "npm:@babel/parser@^7.17.8",
-    "@babel/parser_7.17.9": "npm:@babel/parser@^7.17.9",
-    "@babel/parser_7.18.0": "npm:@babel/parser@^7.18.0",
-    "@babel/parser_7.18.3": "npm:@babel/parser@^7.18.3",
-    "@babel/parser_7.18.4": "npm:@babel/parser@^7.18.4",
-    "@babel/parser_7.2.0": "npm:@babel/parser@^7.2.0",
-    "@babel/parser_7.2.2": "npm:@babel/parser@^7.2.2",
-    "@babel/parser_7.2.3": "npm:@babel/parser@^7.2.3",
-    "@babel/parser_7.3.0": "npm:@babel/parser@^7.3.0",
-    "@babel/parser_7.3.1": "npm:@babel/parser@^7.3.1",
-    "@babel/parser_7.3.2": "npm:@babel/parser@^7.3.2",
-    "@babel/parser_7.3.3": "npm:@babel/parser@^7.3.3",
-    "@babel/parser_7.3.4": "npm:@babel/parser@^7.3.4",
-    "@babel/parser_7.4.0": "npm:@babel/parser@^7.4.0",
-    "@babel/parser_7.4.2": "npm:@babel/parser@^7.4.2",
-    "@babel/parser_7.4.3": "npm:@babel/parser@^7.4.3",
-    "@babel/parser_7.4.4": "npm:@babel/parser@^7.4.4",
-    "@babel/parser_7.4.5": "npm:@babel/parser@^7.4.5",
-    "@babel/parser_7.5.0": "npm:@babel/parser@^7.5.0",
-    "@babel/parser_7.5.5": "npm:@babel/parser@^7.5.5",
-    "@babel/parser_7.6.0": "npm:@babel/parser@^7.6.0",
-    "@babel/parser_7.6.2": "npm:@babel/parser@^7.6.2",
-    "@babel/parser_7.6.3": "npm:@babel/parser@^7.6.3",
-    "@babel/parser_7.6.4": "npm:@babel/parser@^7.6.4",
-    "@babel/parser_7.7.0": "npm:@babel/parser@^7.7.0",
-    "@babel/parser_7.7.2": "npm:@babel/parser@^7.7.2",
-    "@babel/parser_7.7.3": "npm:@babel/parser@^7.7.3",
-    "@babel/parser_7.7.4": "npm:@babel/parser@^7.7.4",
-    "@babel/parser_7.7.5": "npm:@babel/parser@^7.7.5",
-    "@babel/parser_7.7.7": "npm:@babel/parser@^7.7.7",
-    "@babel/parser_7.8.0": "npm:@babel/parser@^7.8.0",
-    "@babel/parser_7.8.3": "npm:@babel/parser@^7.8.3",
-    "@babel/parser_7.8.4": "npm:@babel/parser@^7.8.4",
-    "@babel/parser_7.8.6": "npm:@babel/parser@^7.8.6",
-    "@babel/parser_7.8.7": "npm:@babel/parser@^7.8.7",
-    "@babel/parser_7.8.8": "npm:@babel/parser@^7.8.8",
-    "@babel/parser_7.9.0": "npm:@babel/parser@^7.9.0",
-    "@babel/parser_7.9.2": "npm:@babel/parser@^7.9.2",
-    "@babel/parser_7.9.3": "npm:@babel/parser@^7.9.3",
-    "@babel/parser_7.9.4": "npm:@babel/parser@^7.9.4",
-    "@babel/parser_7.9.6": "npm:@babel/parser@^7.9.6",
-    "acorn": "^7.1.1",
-    "cli-table": "^0.3.1",
-    "esprima": "^4.0.1",
-    "meriyah": "^1.6.15"
+    "puppeteer_0.0.0": "npm:puppeteer@^0.0.0",
+    "puppeteer_0.10.0": "npm:puppeteer@^0.10.0",
+    "puppeteer_0.10.1": "npm:puppeteer@^0.10.1",
+    "puppeteer_0.10.2": "npm:puppeteer@^0.10.2",
+    "puppeteer_0.11.0": "npm:puppeteer@^0.11.0",
+    "puppeteer_0.12.0": "npm:puppeteer@^0.12.0",
+    "puppeteer_0.13.0": "npm:puppeteer@^0.13.0",
+    "puppeteer_0.9.0": "npm:puppeteer@^0.9.0",
+    "puppeteer_1.0.0": "npm:puppeteer@^1.0.0",
+    "puppeteer_1.1.0": "npm:puppeteer@^1.1.0",
+    "puppeteer_1.1.1": "npm:puppeteer@^1.1.1",
+    "puppeteer_1.10.0": "npm:puppeteer@^1.10.0",
+    "puppeteer_1.11.0": "npm:puppeteer@^1.11.0",
+    "puppeteer_1.12.0": "npm:puppeteer@^1.12.0",
+    "puppeteer_1.12.1": "npm:puppeteer@^1.12.1",
+    "puppeteer_1.12.2": "npm:puppeteer@^1.12.2",
+    "puppeteer_1.13.0": "npm:puppeteer@^1.13.0",
+    "puppeteer_1.14.0": "npm:puppeteer@^1.14.0",
+    "puppeteer_1.15.0": "npm:puppeteer@^1.15.0",
+    "puppeteer_1.16.0": "npm:puppeteer@^1.16.0",
+    "puppeteer_1.17.0": "npm:puppeteer@^1.17.0",
+    "puppeteer_1.18.0": "npm:puppeteer@^1.18.0",
+    "puppeteer_1.18.1": "npm:puppeteer@^1.18.1",
+    "puppeteer_1.19.0": "npm:puppeteer@^1.19.0",
+    "puppeteer_1.2.0": "npm:puppeteer@^1.2.0",
+    "puppeteer_1.20.0": "npm:puppeteer@^1.20.0",
+    "puppeteer_1.3.0": "npm:puppeteer@^1.3.0",
+    "puppeteer_1.4.0": "npm:puppeteer@^1.4.0",
+    "puppeteer_1.5.0": "npm:puppeteer@^1.5.0",
+    "puppeteer_1.6.0": "npm:puppeteer@^1.6.0",
+    "puppeteer_1.6.1": "npm:puppeteer@^1.6.1",
+    "puppeteer_1.6.2": "npm:puppeteer@^1.6.2",
+    "puppeteer_1.7.0": "npm:puppeteer@^1.7.0",
+    "puppeteer_1.8.0": "npm:puppeteer@^1.8.0",
+    "puppeteer_1.9.0": "npm:puppeteer@^1.9.0",
+    "puppeteer_2.0.0": "npm:puppeteer@^2.0.0",
+    "puppeteer_2.1.0": "npm:puppeteer@^2.1.0",
+    "puppeteer_2.1.1": "npm:puppeteer@^2.1.1",
+    "puppeteer_3.0.0": "npm:puppeteer@^3.0.0",
+    "puppeteer_3.0.1": "npm:puppeteer@^3.0.1",
+    "puppeteer_3.0.2": "npm:puppeteer@^3.0.2",
+    "puppeteer_3.0.3": "npm:puppeteer@^3.0.3",
+    "puppeteer_3.0.4": "npm:puppeteer@^3.0.4",
+    "puppeteer_3.1.0": "npm:puppeteer@^3.1.0"
   },
   "devDependencies": {
     "0x": "^5.2.1",
